# lagrange-rs

./: Cargo.toml
.github/workflows/: ci.yml
crates/lagrange-core/: Cargo.toml
crates/lagrange-core-runner/: Cargo.toml
crates/lagrange-core-runner/src/: main.rs
crates/lagrange-core/src/: business.rs  common.rs  config.rs  context.rs  error.rs  internal.rs  keystore.rs  lib.rs  protocol.rs  services.rs  utils.rs
crates/lagrange-core/src/business/: account.rs  network.rs
crates/lagrange-core/src/common/: app_info.rs  bot_info.rs  contact.rs  sign.rs
crates/lagrange-core/src/internal/: context.rs  packets.rs  service.rs  services.rs
crates/lagrange-core/src/internal/context/: cache.rs  event.rs  packet.rs  service.rs  socket.rs
crates/lagrange-core/src/internal/packets/: login.rs  structs.rs
crates/lagrange-core/src/internal/packets/login/: qr_login_ext_info.rs  tlv.rs  tlv_qrcode.rs  tlv_writer.rs  wtlogin.rs
crates/lagrange-core/src/internal/packets/structs/: service_packer.rs  sso_packer.rs  sso_packet.rs  sso_reserved_fields.rs  sso_secure_info.rs  struct_base.rs
crates/lagrange-core/src/internal/services/: exchange_emp.rs  login.rs  message.rs  qrlogin.rs  system.rs  trans_emp.rs  uin_resolve.rs
crates/lagrange-core/src/internal/services/login/: exchange_emp.rs  login.rs  password.rs  qrlogin.rs  trans_emp.rs  uin_resolve.rs
crates/lagrange-core/src/internal/services/system/: heartbeat.rs
crates/lagrange-core/src/services/: login.rs
crates/lagrange-core/src/utils/: binary.rs  common.rs  crypto.rs
crates/lagrange-core/src/utils/binary/: helper.rs  packet.rs  prefix.rs
crates/lagrange-core/src/utils/crypto/: aes_gcm.rs  ecdh.rs  pow.rs  sha1_stream.rs  tea.rs  tri_sha1.rs
crates/lagrange-core/tests/: integration_test.rs  sequence_test.rs
crates/lagrange-macros/: Cargo.toml  README.md
crates/lagrange-macros/src/: auto_reexport.rs  define_service.rs  event_subscribe.rs  lib.rs  service.rs  service_parser.rs  utils.rs
crates/lagrange-proto/: Cargo.toml
crates/lagrange-proto-derive/: Cargo.toml
crates/lagrange-proto-derive/src/: attributes.rs  builder_derive.rs  enum_derive.rs  lib.rs  message.rs  oneof_derive.rs
crates/lagrange-proto/benches/: varint.rs
crates/lagrange-proto/src/: decoding.rs  encoding.rs  error.rs  helpers.rs  lib.rs  message.rs  types.rs  unknown_fields.rs  varint.rs  wire.rs
crates/lagrange-proto/src/varint/: decode.rs  encode.rs  num.rs
crates/lagrange-proto/src/varint/decode/: simd.rs
crates/lagrange-proto/src/varint/encode/: simd.rs
crates/lagrange-proto/tests/: advanced_features_test.rs  collection_edge_cases_test.rs  edge_cases_test.rs  error_handling_test.rs  field_reader_test.rs  integration_test.rs  malformed_data_test.rs  performance_edge_cases_test.rs  size_calculation_test.rs  special_types_test.rs  unknown_fields_test.rs  varint_comprehensive_test.rs
