[package]
name = "lagrange-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_bytes.workspace = true
bytes.workspace = true
dashmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
inventory.workspace = true
tracing.workspace = true
chrono.workspace = true
rand.workspace = true
lagrange-macros.workspace = true

# Cryptography
aes-gcm = "0.10"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
num-bigint = "0.4"
getrandom = "0.2"
