[package]
name = "lagrange-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_bytes.workspace = true
bytes.workspace = true
dashmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
linkme.workspace = true
tracing.workspace = true
chrono.workspace = true
rand.workspace = true
lagrange-macros.workspace = true
lagrange-proto = { workspace = true, features = ["derive"] }

# Cryptography
aes-gcm = "0.10"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
num-bigint = "0.4"

# Optional: Sign provider
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4", optional = true }

[features]
sign-provider = ["reqwest", "serde_json", "hex"]
