[package]
name = "lagrange-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Derive macros
lagrange-proto-derive = { path = "../lagrange-proto-derive", optional = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["derive"]
derive = ["dep:lagrange-proto-derive"]

[[bench]]
name = "varint"
harness = false
